--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,9 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="@dimen/activity_vertical_margin"
-    tools:context="com.sarahehabm.orangerx.MainActivity">
+    tools:context=".view.MainActivity">
 
     <LinearLayout
+        android:id="@+id/layout_user"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
@@ -39,7 +40,41 @@
         style="?android:attr/progressBarStyleLarge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/layout_user"
+        android:layout_alignTop="@+id/layout_user"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
         android:visibility="gone" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerView_users"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/layout_user" />
+
+    <ProgressBar
+        android:id="@+id/progressBar_users"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/recyclerView_users"
+        android:layout_alignTop="@+id/recyclerView_users"
+        android:layout_centerHorizontal="true"
+        android:visibility="visible" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerView_locations"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/activity_horizontal_margin"
+        android:layout_below="@+id/recyclerView_users" />
+
+    <ProgressBar
+        android:id="@+id/progressBar_locations"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/recyclerView_locations"
+        android:layout_alignTop="@+id/recyclerView_locations"
+        android:layout_centerHorizontal="true"
+        android:visibility="visible" />
 </RelativeLayout>
